added html and css

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,15 +2,54 @@
 <html>
    <head>
      <title>Migol</title>
+<style>
+h1
+   {
+     font-size:40px;
+     font-family:Roboto;
+     font-weight:normal;
+     color:rgb(180,100,140);
+     text-align:center;
+   }
+#pic
+   {
+     width:100%;
+     height:360px;
+   }
+h2
+  {
+    font-family:Roboto;
+    font-size:32px;
+    color:rgb(100,230,200);
+    text-align:center;
+  }
+
+#container
+  {
+    max-width:720px;
+    margin:0 auto;
+  }
+
+.bodytext
+  {
+    font-family:Roboto;
+    color:rgb(80, 80, 80);
+  }
+
+  
+     </style>
    </head>
 
   
   <body>
+
+
+    <div id="container">
     <h1>Migz Albs</h1>
-    <img class="pic" src="https://migz-website--migolski.repl.co/static/pic.jpg" height="320">
+    <img id="pic" src="https://migz-website--migolski.repl.co/static/pic.jpg" height="320">
 
     <h2>About Migz</h2>
-    <p>
+    <p class="bodytext">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate enim et venenatis consectetur. Aliquam erat volutpat. Fusce molestie quis ante vitae congue. Integer ligula neque, laoreet ac risus nec, rhoncus tempus leo. Duis non luctus mauris, et facilisis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas luctus mauris odio. Duis tristique a ante tincidunt mattis.
 
 Proin fringilla, mi eget lobortis volutpat, turpis nulla rhoncus ex, sit amet mollis odio elit a quam. Donec vehicula ipsum libero, vitae accumsan magna tincidunt quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi sem metus, ullamcorper et sollicitudin vel, tincidunt sed ligula. Mauris eu erat orci. Nullam rutrum, risus in congue aliquet, metus nulla luctus dolor, ac lobortis metus elit pretium tortor. In fringilla feugiat convallis. Proin luctus venenatis condimentum. Integer aliquet arcu et arcu rutrum tristique. Vestibulum euismod tempus odio, eget gravida augue viverra ac.
@@ -19,7 +58,11 @@ Vivamus a arcu metus. Mauris accumsan varius sagittis. Integer sodales arcu et i
     </p>
 
     <h2>Open Positions</h2>
-    <p>TODO - Show thwe jobs here</p>
+    <p class="bodytext">TODO - Show the jobs here</p>
+      <div style="text-align:center;">
     <button>Contact Us</button>
+        <p>Copyright 2023, Migz</p>
+      </div>
+    </div>
   </body>
 </html>
