--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,22 @@
 <! DOCTYPE html>
 <html>
-   <head>
-     <title>Migol</title>
+<head>
+<title>Migol</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 <style>
-h1
-   {
-     font-size:40px;
-     font-family:Roboto;
-     font-weight:normal;
-     color:rgb(180,100,140);
-     text-align:center;
-   }
-#pic
-   {
-     width:100%;
-     height:360px;
-   }
-h2
-  {
-    font-family:Roboto;
-    font-size:32px;
-    color:rgb(100,230,200);
-    text-align:center;
-  }
-
-#container
-  {
-    max-width:720px;
-    margin:0 auto;
-  }
-
-.bodytext
-  {
-    font-family:Roboto;
-    color:rgb(80, 80, 80);
-  }
-
-  
-     </style>
-   </head>
-
-  
-  <body>
+       
+</style>
+</head>
+<body>
 
 
-    <div id="container">
-    <h1>Migz Albs</h1>
-    <img id="pic" src="https://migz-website--migolski.repl.co/static/pic.jpg" height="320">
+    <div class="container">
+    <h1 class="text-center mt-2 mb-2">{{company_name}} Careers</h1>
+    <img class="img-fluid" src="https://migz-website--migolski.repl.co/static/pic.jpg" height="320">
 
-    <h2>About Migz</h2>
-    <p class="bodytext">
+    <h2 class="text-center mt-2 mb-4 ">About Migz</h2>
+    <p class="lead" style="">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate enim et venenatis consectetur. Aliquam erat volutpat. Fusce molestie quis ante vitae congue. Integer ligula neque, laoreet ac risus nec, rhoncus tempus leo. Duis non luctus mauris, et facilisis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas luctus mauris odio. Duis tristique a ante tincidunt mattis.
 
 Proin fringilla, mi eget lobortis volutpat, turpis nulla rhoncus ex, sit amet mollis odio elit a quam. Donec vehicula ipsum libero, vitae accumsan magna tincidunt quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi sem metus, ullamcorper et sollicitudin vel, tincidunt sed ligula. Mauris eu erat orci. Nullam rutrum, risus in congue aliquet, metus nulla luctus dolor, ac lobortis metus elit pretium tortor. In fringilla feugiat convallis. Proin luctus venenatis condimentum. Integer aliquet arcu et arcu rutrum tristique. Vestibulum euismod tempus odio, eget gravida augue viverra ac.
@@ -57,11 +24,15 @@ Proin fringilla, mi eget lobortis volutpat, turpis nulla rhoncus ex, sit amet mo
 Vivamus a arcu metus. Mauris accumsan varius sagittis. Integer sodales arcu et ipsum efficitur luctus. Quisque purus lorem, viverra ac convallis hendrerit, lacinia vitae lorem. Proin id urna lacus. Vestibulum vestibulum tempor erat ut lacinia. Maecenas condimentum nisl tortor, eget finibus sem efficitur sit amet. Maecenas vel sodales odio. Aenean a magna nec quam laoreet congue.
     </p>
 
-    <h2>Open Positions</h2>
-    <p class="bodytext">TODO - Show the jobs here</p>
+    <h2 class="text-center mt-2 mb-4">Open Positions</h2> 
+    <div >
+      {% for job in jobs %}
+     {%include 'jobitem.html'%}
+      {% endfor %}
+    </div>
       <div style="text-align:center;">
-    <button>Contact Us</button>
-        <p>Copyright 2023, Migz</p>
+    <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">Copyright 2023, Migz</p>
       </div>
     </div>
   </body>
