made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@ Proin fringilla, mi eget lobortis volutpat, turpis nulla rhoncus ex, sit amet mo
 Vivamus a arcu metus. Mauris accumsan varius sagittis. Integer sodales arcu et ipsum efficitur luctus. Quisque purus lorem, viverra ac convallis hendrerit, lacinia vitae lorem. Proin id urna lacus. Vestibulum vestibulum tempor erat ut lacinia. Maecenas condimentum nisl tortor, eget finibus sem efficitur sit amet. Maecenas vel sodales odio. Aenean a magna nec quam laoreet congue.
     </p>
 
-    <h2 class="text-center mt-2 mb-4">Open Positions</h2> 
+    <h2 class="text-center mt-2 mb-4">Job Openings</h2> 
     <div >
       {% for job in jobs %}
      {%include 'jobitem.html'%}
