--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -15,6 +15,6 @@
         {% endif %}
   </div>
   <div class="col-2">
-   <button type="button" class="btn btn-outline-primary">Apply</button>
+  <a href="mailto:careers@migz.ai?subject=Application%20for%{{job['title']}}&body=My%20Name%3A%20%3Cyour%20name%3E%0D%0AMy%20Resume%20link%3A%20%3Cresume%20link%3E" type="button" target="_blank" class="btn btn-outline-primary float-right align-middle">Apply</a>
   </div>
 </div>
